[project]
name = "reboot"
description = "Custom node to reboot ComfyUI server"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["requests"]

[project.urls]
Repository = "https://github.com/bobosola/ComfyUI-reboot"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/bobosola/ComfyUI-reboot/wiki"
"Bug Tracker" = "https://github.com/bobosola/ComfyUI-reboot/issues"

[tool.comfy]
PublisherId = "bobosola"
DisplayName = "ComfyUI-reboot"
Icon = "https://raw.githubusercontent.com/bobosola/repo/ComfyUI-reboot/assets/icon.png"
